updated the carousel to be responsive for smaller screens; fixed nav-bar not 100% on small screen size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,8 +48,8 @@ body {
 
 .carousel,
 .carousel-item {
-  height: 600px;
-  width: 1100px;
+  height: 100%;
+  width: 100%;
 }
 
 .carousel-caption {
@@ -67,6 +67,7 @@ body {
 
 .navbar {
   background-color: black;
+  width: 100%;
 }
 
 .card {
@@ -107,7 +108,6 @@ body {
 }
 
 #patientVisitContainer .card .card-body li {
-  /* border: 1px solid grey; */
   padding: 10px;
 }
 
@@ -227,4 +227,10 @@ footer {
   max-height: 360px;
   width: auto;
   height: auto;
+}
+
+.img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
